fix(scheduler): missing border
https://github.com/telerik/kendo-themes/issues/1150

--- a/packages/default/scss/scheduler/_layout.scss
+++ b/packages/default/scss/scheduler/_layout.scss
@@ -942,7 +942,7 @@
                 border-left-width: 0;
             }
 
-            .k-scheduler-datecolumn {
+            .k-scheduler-datecolumn:first-child {
                 border-left-width: 0 !important; // sass-lint:disable-line no-important
             }
         }
@@ -1190,7 +1190,7 @@
                     }
                 }
 
-                .k-scheduler-datecolumn {
+                .k-scheduler-datecolumn:first-child {
                     border-right-width: 0 !important; // sass-lint:disable-line no-important
                 }
             }
